[gd_scene load_steps=5 format=3 uid="uid://cbv0uuuwmm5j5"]

[ext_resource type="Script" path="res://scenes/ListeningUI/recording_container.gd" id="1_vh0ag"]
[ext_resource type="PackedScene" uid="uid://ce0vj1kbrojpq" path="res://scenes/AudioPlayer/audio_player_with_time_limit.tscn" id="2_kwo87"]
[ext_resource type="PackedScene" uid="uid://c0k1dfksrc6br" path="res://scenes/APIClient/ClientWrappers/get_submit_url.tscn" id="3_k6g3s"]
[ext_resource type="PackedScene" uid="uid://cacmlvjd22f63" path="res://scenes/APIClient/ClientWrappers/submit_folklore.tscn" id="4_se33b"]

[node name="RecordingContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vh0ag")

[node name="GoBackButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "Go Back"

[node name="ActionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Retelling"

[node name="StoryTitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.921569, 0.627451, 1)
theme_override_font_sizes/font_size = 32

[node name="AuthorNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.631373, 0.52549, 0.619608, 1)

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="TitleQuestionLabel" type="Label" parent="."]
layout_mode = 2
text = "What is your story's title?"
horizontal_alignment = 1

[node name="StoryTitleEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Title"
alignment = 1

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 2
text = "Tell or retell the story in your own words.

Get your microphone ready and quiet background noise.
Stories must less than 3 minutes long and in English.
Accents are fine. Creative interpretations are, too.
Have fun with it!

Press the record button below to begin."
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="AudioPlayer" parent="MarginContainer" instance=ExtResource("2_kwo87")]
unique_name_in_owner = true
layout_mode = 2
current_state = 2
recording_enabled = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 16

[node name="SubmitButton" type="Button" parent="MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 8
disabled = true
text = "Submit Story"

[node name="GetSubmitURL" parent="." instance=ExtResource("3_k6g3s")]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
dialog_text = "Going back will clear your recordings.

Are you sure you want to go back?"

[node name="S3PutRequest" type="HTTPRequest" parent="."]

[node name="SubmitFolklore" parent="." instance=ExtResource("4_se33b")]

[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
[connection signal="recording_started" from="MarginContainer/AudioPlayer" to="." method="_on_audio_player_recording_started"]
[connection signal="recording_stopped" from="MarginContainer/AudioPlayer" to="." method="_on_audio_player_recording_stopped"]
[connection signal="pressed" from="MarginContainer2/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="url_received" from="GetSubmitURL" to="." method="_on_get_submit_url_url_received"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="request_completed" from="S3PutRequest" to="." method="_on_s_3_put_request_request_completed"]
[connection signal="folklore_submitted" from="SubmitFolklore" to="." method="_on_submit_folklore_folklore_submitted"]
[connection signal="request_failed" from="SubmitFolklore" to="." method="_on_submit_folklore_request_failed"]
